# transfer_music_favourites

./: AGENTS.md  Cargo.toml  README.md  transfer_config.toml.example
src/: api.rs  cli.rs  config.rs  constants.rs  lib.rs  main.rs  models.rs  sync.rs
src/sync/: conversion.rs  mod.rs  sync_lyrics.rs  sync_music.rs  utils.rs
