[package]
name = "transfer_music_favourites"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
config = { version = "0.14.0", features = ["toml"] }
dirs = "5.0.1"
futures = "0.3.32"
hex = "0.4.3"
indicatif = "0.18.4"
md-5 = "0.11.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8.13"
url = "2.5.8"
